# ExpressFunctionApp/docs/swagger.json
@@ -213,6 +213,66 @@
         }
       }
     },
+    "/files/upload/uri": {
+      "post": {
+        "summary": "Uploads file by URI",
+        "description": "Uploads file by URI",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "rootBody",
+            "description": "Root Body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "fileUri": {
+                  "description": "File to upload",
+                  "x-ntx-summary": "File to upload",
+                  "type": "string",
+                  "format": "x-ntx-file-reference"
+                },
+                "customName": {
+                  "description": "Custom name with extension",
+                  "x-ntx-summary": "Custom name with extension",
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "customName": {
+                  "type": "string",
+                  "description": "Custom file name Output",
+                  "x-ntx-summary": "Custom file name Output"
+                },
+                "mimeType": {
+                  "type": "string",
+                  "description": "MIME type Output",
+                  "x-ntx-summary": "MIME type Output"
+                },
+                "md5": {
+                  "type": "string",
+                  "description": "MD5 Output",
+                  "x-ntx-summary": "MD5 Output"
+                },
+                "size": {
+                  "type": "integer",
+                  "description": "File size Output",
+                  "x-ntx-summary": "File size Output"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/all-types": {
       "post": {
         "summary": "POST all variable types",
